--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
   
   <main>
     <div class="inject">
-      <div class="inject__info"></div>
+      <div class="inject__info">
+        <div class="inject__info-wrapper">
+          <h1>Инъекционная косметология</h1>
+          <p>То, насколько женщина красива, зависит не от природы, <br> 
+            а от нее самой... <br><br>
+            Именно поэтому любая красота требует вложений!</p>
+        </div>
+      </div>
+
       <div class="inject__photo">
         <img src="img/doctor-1.jpg" alt="">
       </div>
