--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
-  <title>Cosmetology</title>
+  <title>Documents</title>
 </head>
 <body>
   <header class="header">
     <div class="header__logo">
-      <img src="img/logo.png" alt="">
+      <a href="/">
+        <img src="img/logo.png" alt="">
+      </a>
     </div>
     <div class="header__menu">
       <a href="#">Главная</a>
@@ -30,7 +32,11 @@
           <h1>Инъекционная косметология</h1>
           <p>То, насколько женщина красива, зависит не от природы, <br> 
             а от нее самой... <br><br>
-            Именно поэтому любая красота требует вложений!</p>
+            Именно поэтому любая красота требует вложений!
+          </p>
+          <div>
+            <img src="img/arrow_1.svg" alt="">
+          </div>
         </div>
       </div>
 
@@ -38,8 +44,130 @@
         <img src="img/doctor-1.jpg" alt="">
       </div>
     </div>
+
+    <div class="dr">
+      <div class="dr__container">
+        <div class="dr__left">
+          <div class="dr__left-wrapper">
+            <img class="dr__left-def" src="img/doctor-2.jpg" alt="">
+            <img class="dr__left-abs" src="img/doctor-3.jpg" alt="">
+          </div>
+        </div>
+        <div class="dr__right">
+          <h2>Dr. Mariam Chikovani</h2>
+          <h3>“Косметолог - это мое призвание!”</h3>
+          <div class="dr__right-list">
+            <p>Три кита, на которых <br> строится моя работа:</p>
+            <ul>
+              <li>Индивидуальный и безопасный подход.</li>
+              <li>Дарить уверенность и любовь к себе.</li>
+              <li>Проводить только те процедуры, которые действительно необходимы пациентам.</li>
+            </ul>
+            <a href="/">
+              <img src="img/arrow_2.svg" alt="">
+              <p>Увидеть работы</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="services">
+      <div class="services__container">
+        <h2>Услуги:</h2>
+        <div class="services__wrapper">
+          <div class="services__left">
+            <ul>
+              <li>Аугментация губ</li>
+              <li>Контурная пластика лица</li>
+              <li>Ботулинотерапия</li>
+              <li>Биоревитализация</li>
+              <li>Липолитики для лица</li>
+              <li>Удаление старого филлера</li>
+            </ul>
+          </div>
+          <div class="services__right">
+            <div>
+              <img src="img/doctor_4.jpg" alt="">
+            </div>
+            <a href="/">
+              <img src="img/arrow_2.svg" alt="">
+              <p>Записаться</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="learn">
+      <div class="learn__container">
+        <h2 class="learn__title">Индивидуальные <span>обучения</span> по авторской технике</h2>
+        <p class="learn__text">Я прошла огромное количество обучений, благодаря которым создала свои техники, которые применяю в практике, и делюсь ими с вами на своих обучениях!
+        </p>
+        <div class="learn__table">
+          <div class="learn__table-b1">авторская техника <br> увеличения губ</div>
+          <div class="learn__table-b2">100 + <br> учениц</div>
+          <div class="learn__table-b3">именные сертификаты <br> после обучения</div>
+        </div>
+        <p class="learn__subtext">НО важно понимать, что я даю вам не техники, а шанс выхода на новый уровень, благодаря которому вы сможете зарабатывать в 5,  10 и 50 раз больше, чем вы зарабатываете сейчас!
+        </p>
+        <div class="learn__button">
+          <a href="/">
+            <img src="img/arrow_2.svg" alt="">
+            <p>Узнать подробнее</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="subs">
+       <div class="subs__container">
+        <h3>Что говорят мои клиентки:</h3>
+        <div class="subs__slider">
+          <div class="subs__slider-item">
+            <p>Прошло 3 недели с нашей процедуры Full face , уже ничего не болит и я хочу Вам сказать огромное спасибо за Вашу работу!Просто +1000 к самооценке))) 
+              Я никогда так не любила смотреть на себя в зеркало...
+              Вы просто волшебница, спасибо!</p>
+          </div>
+          <div class="subs__slider-item">
+            <p>Хочу выразить вам 
+              свою благодарность!
+              Мой штрихкод на лбу и угрюмая межбровка видимо нашли 
+              своего мастера)) 
+              Они больше не хмурятся 
+              и очень довольны ,что попали 
+              в ваши волшебные ручки.</p>
+          </div>
+          <div class="subs__slider-item">
+            <p>Отёки сошли, синячки тоже.Форма и результат меня очень радуют, потому что это именно то, чего я хотела. Лицо пришло в гармонию с новыми губами.
+              Я выбирала около года косметолога, пересмотрела очень многих. Последний месяц тщательно обдумывала и не ошиблась в своём выборе, потому что таких красивых работ и результатов не у многих можно найти.Можно рекомендовать такого косметолога всем желающим и сомневающимся.</p>
+          </div>
+          <div class="subs__slider-item">
+            <p>Вот и пришло мое время оставлять свой отзыв для любимой и самой шикарной девушки и Мастеру своего дела - Марьям.
+              Благодаря такому квалифицированному специалисту я изменилась на ДО и ПОСЛЕ всего за 2 недели. Очень благодарна и хочу показать, как я выгляжу сейчас и какой была ещё 2 недели назад, до того как пришла на первый но не последний прием. Огромное спасибо! Желаю всем девочкам попасть именно к вам.</p>
+          </div>
+          <div class="subs__slider-item">
+            <p>Вы лучшее, что со мной случалось! Я в таком восторге от своих губ, 
+              2 месяца прошло, а я любуюсь каждый день ими. 
+              Так захотелось вам высказать свой восторг, вы огромная молодец!</p>
+          </div>
+          <div class="subs__slider-item">
+            <p>Хотела вас поблагодарить!
+              Губки, подбородок и углы чудесные, я в восторге, 
+             остальные завидуют...
+             Вы на своём месте в жизни, держитесь себя, 
+             спасибо большое Вам!</p>
+          </div>
+        </div>
+       </div>
+
+    </div>
   </main>
   
   <footer></footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
