--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <title>Documents</title>
 </head>
@@ -159,14 +160,236 @@
              спасибо большое Вам!</p>
           </div>
         </div>
-       </div>
-
+      </div>
     </div>
+
+    <div class="gallery">
+      <div class="gallery__wrapper">
+        <div class="gallery__b1">
+          <div class="gallery__b1-img1">
+            <img src="img/dr-1-1.jpg" alt="">
+          </div>
+          <div class="gallery__b1-img2">
+            <img src="img/dr-1-2.jpg" alt="">
+          </div>
+        </div>
+        <div class="gallery__b2">
+          <div class="gallery__b2-img1">
+            <img src="img/dr-2-1.jpg" alt="">
+          </div>
+          <div class="gallery__b2-text">
+            <p>Записаться и узнать больше информации вы можете в  <a href="#">Instagram</a>, написав в <a href="#">direct</a>.</p>
+          </div>
+          <div class="gallery__b2-img2">
+            <img src="img/dr-2-2.jpg" alt="">
+          </div>
+        </div>
+        <div class="gallery__b3">
+          <div class="gallery__b3-img1">
+            <img src="img/dr-3-1.jpg" alt="">
+          </div>
+          <div class="gallery__b3-img2">
+            <img src="img/dr-3-2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="gallery__btn">
+        <a href="#">Записаться</a>
+        <img src="img/arrow_long.svg" alt="">
+      </div>
+    </div>
+
+    <div class="ques">
+      <div class="ques__container">
+        <h3>Часто задаваемые вопросы:</h3>
+        <div class="accordion" id="accordionExample">
+
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Хочу сделать губы, но боюсь боли.
+                </button>
+              </h2>
+            </div>
+        
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body">
+                Во-первых, перед каждой процедурой увеличения губ всегда выполняется аппликационная анестезия (это крем, в состав которого входит лидокаин, который обезболивает поверхностные слои дермы), при условии отсутствия аллергии.
+Во-вторых, также при условии отсутствия аллергической реакции на лидокаин, подбирается препарат, в состав которого он входит.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Сделала губы у другого косметолога, не нравится результат, что можно сделать?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                В случае миграции филлера либо асимметрии губ после введения препарата, есть возможность удалить его с помощью гиалуронитазы(загуглить) и легко переделать форму на желаемую.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Почему мигрирует филлер?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body">
+                Это может происходить по многим причинам, основные из которых: 
+-слишком глубокая техника введения препарата; 
+-гипертонус круговой мышцы рта (чрезмерно активная мимика); 
+-неправильно подобранная плотность препарата.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Почему быстро уходит филлер?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate cum nostrum error modi. Accusantium, ex vel perferendis ipsam molestias corrupti labore soluta ad dolor tempore dignissimos nobis maiores mollitia?
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingFive">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  Хочу сделать губы, но боюсь, что не подойдёт форма, как быть?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, itaque. Eveniet dolorem placeat saepe itaque cupiditate voluptas obcaecati libero numquam aliquid, ratione laboriosam iste natus est reiciendis molestias porro voluptatem. Esse excepturi explicabo aperiam eos.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingSix">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  Боюсь, что губы станут слишком большими и не натуральными!
+
+                </button>
+              </h2>
+            </div>
+            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus fuga ut? Accusamus suscipit tempore error architecto quia? Eos soluta consequuntur blanditiis, qui, nulla dolorem labore nam dignissimos reprehenderit suscipit recusandae iure minima.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingSeven">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                  У другого косметолога дешевле, почему я должна пойти к вам?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ab esse eos est sequi, facilis fuga dicta ipsa veniam fugiat recusandae eaque aliquam aut ducimus at excepturi reiciendis velit autem. Vero aliquam necessitatibus accusamus nihil repellat itaque!
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingEight">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                  Хочу попасть к вам моделью, но боюсь за качество результата.
+                </button>
+              </h2>
+            </div>
+            <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident perferendis voluptatum, possimus nostrum veritatis beatae omnis pariatur dignissimos voluptatibus quod saepe facere mollitia porro sint sequi impedit inventore, repudiandae animi vero. Culpa, blanditiis! Perferendis iusto aspernatur quis delectus sit. Possimus, dolore.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="call">
+      <div class="call__container">
+
+        <h3>У вас остались какие-либо вопросы и выхотите получить больше информации? <br>
+          Оставьте ваш номер и менеджер вам перезвонит.
+        </h3>
+
+        <form class="call__form" action="#">
+          <div class="call__input">
+            <input type="text" placeholder="Имя">
+          </div>
+
+          <div class="call__input">
+            <input id="phone" type="tel" placeholder="Номер телефона">
+          </div>
+
+          <div class="call__comments">
+            <textarea type="text" placeholder="Комментарий или вопрос"></textarea>
+          </div>
+
+          <div class="call__button">
+            <button class="" type="submit">
+              <span>перезвоните мне</span>
+            </button>
+          </div>
+        </form>
+
+      </div>
+    </div>  
   </main>
   
-  <footer></footer>
+  <footer class="footer footer__main">
+    <div class="footer__container">
+      <div class="footer__top">
+        <a href="#" class="footer__top-img">
+          <img src="img/inst-main.svg" alt="">
+        </a>
+        <div class="footer__top-menu">
+          <ul>
+            <li>Главная</li>
+            <li>Работы</li>
+            <li>Цены</li>
+            <li>Обучения</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <a href="/">
+          <img src="img/f-main.png" alt="">
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
