--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <img src="img/logo.png" alt="">
       </a>
     </div>
-    <div class="header__menu">
+    <nav class="header__menu">
       <a href="#">Главная</a>
       <a href="#">Работы</a>
       <a href="#">Цены</a>
       <a href="#">Обучение</a>
-      </div>
+      </nav>
     <a href="#" class="header__inst">
       <img src="img/inst.svg" alt="">
     </a>
@@ -371,12 +371,12 @@
           <img src="img/inst-main.svg" alt="">
         </a>
         <div class="footer__top-menu">
-          <ul>
-            <li>Главная</li>
-            <li>Работы</li>
-            <li>Цены</li>
-            <li>Обучения</li>
-          </ul>
+          <nav>
+            <a href="#">Главная</a>
+            <a href="#">Работы</a>
+            <a href="#">Цены</a>
+            <a href="#">Обучения</a>
+          </nav>
         </div>
       </div>
       <div class="footer__bottom">
