--- a/education.html
+++ b/education.html
@@ -71,12 +71,236 @@
             <p>Схемы ботулинотерапии верхней трети лица.</p>
             <p>Отработка на множестве моделей с утра до вечера.</p>
             <p>Постановка руки.</p>
+            <div class="in__showed">
+              <p>Все самые важные секреты , лайфхаки и приёмы в работе косметолога, которые мало кто объясняет и использует.</p>
+              <p>Разбор неотложных состояний и оказание первой медицинской помощи.</p>
+              <p>Делюсь контактами прямых поставщиков препаратов.</p>
+              <p>Подробная инструкция как правильно делать фото и видео работ до/после.</p>
+              <p>Все фото моделей ДО/ПОСЛЕ с обучения Вы можете использовать для развития личного рабочего аккаунта.</p>
+              <p>Рассказываю как правильно вести рабочий Аккаунт и получить гарантированную активность с первой публикации.</p>
+              <p>Своим ученикам я даю ВЕСЬ курс теории по косметологии в электронном виде. Туда входит анатомия , ботулинотерапия, дерматология , контурная пластика, реанимация, неотложная помощь, аптечка , видео уроки оформления губ и очень много нужной и полезной информации для начинающего косметолога. Весь курс теории я скидываю для изучения ДО нашего обучения, чтоб ученик приходил с осознанием того,что и как мы будем делать.</p>
+              <p>Предоставляю множество готовых текстов, постов для косметолога и более 200 сториз на тему косметологии для ведения рабочего аккаунта.</p>
+              <p>В конце обучения выдаётся сертификат.</p>
+            </div>
+            <div class="in__button slide-toggle">
+              <div class="in__button-img"></div>
+              <div class="in__button-text"></div>
+            </div>
+          </div>
+        </div>
+        <img class="in__star1" src="img/star1.svg" alt="">
+        <img class="in__star2" src="img/star2.svg" alt="">
+        <img class="in__star3" src="img/star3.svg" alt="">
+      </div>
+    </div>
+
+    <div class="feedback">
+      <div class="feedback__container">
+        <h2>Отзывы учениц:</h2>
+
+        <div class="feedbackSlider">
+          <div class="feedback__main">
+            <div class="feedback__main-img">
+              <img src="img/fb.jpg" alt="">
+            </div>
+            <div class="feedback__main-text">
+              <h3>Екатерина</h3>
+              <p>Хочу выразить вам свою благодарность за обучение!!! <br>
+                Вы не только прекрасный специалист, прекрасная девушка, но и прекрасный преподаватель!!! <br>
+                То, что обучение превзошла все мои ожидания, ничего не сказать!! Большое количество моделей и главное обучение проходила рука в руку!! Столько фишечек рассказали! Это было лучшее обучение в моей жизни!!! Подача материала, все четко, много практики!! Просто вау!! <br>
+                Я счастлива что попала именно к вам!! Желаю вам дальнейшего роста! Спасибо вам большое от всей души!!! Очень рада нашему знакомству.</p>
+            </div>
+          </div>
+
+          <div class="feedback__main">
+            <div class="feedback__main-img">
+              <img src="img/fb2.jpg" alt="">
+            </div>
+            <div class="feedback__main-text">
+              <h3>Елена</h3>
+              <p>Огромное спасибо за полученные знания, благоприятную атмосферу и столько охваченных аспектов! <br>
+                Я не сомневалась, что с Вами всё будет на высшем уровне. <br>
+                Мноооого практики и понятный язык теории, лучше преподавателя и косметолога я ещё не встречала.</p>
+            </div>
+          </div>
+
+          <div class="feedback__main">
+            <div class="feedback__main-img">
+              <img src="img/fb3.jpg" alt="">
+            </div>
+            <div class="feedback__main-text">
+              <h3>Анастасия</h3>
+              <p>Не верится, что могу зарабатывать так много.
+                Мой заработок пошёл в гору после 
+                обучения у Вас. <br>
+                Спасибо! <br>
+                P.S. И спасибо за чат косметологов.</p>
+            </div>
+          </div>
+
+          <div class="feedback__main">
+            <div class="feedback__main-img">
+              <img src="img/fb4.jpg" alt="">
+            </div>
+            <div class="feedback__main-text">
+              <h3>Ана</h3>
+              <p>Очередной раз , хочу сказать огромное 
+                спасибо за все знания, которые вы в меня вложили, это дорогого стоит!!! <br> 
+                С каждым разом я все увереннее, а работы все лучше. <br>
+                Вы моя Фея, благодаря вам  я знаю, что выбрала правильный путь!!</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="ques ques2">
+      <div class="ques__container">
+        <h3>Часто задаваемые вопросы:</h3>
+        <div class="accordion" id="accordionExample">
+
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Хватит ли мне одного дня на обучение?
+                </button>
+              </h2>
+            </div>
+        
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body">
+                Если Вы действующий косметолог, то одного дня достаточно для ознакомления с новыми техниками и отработкой их на практике. Если Вы начинающий косметолог, то я рекомендую брать программу, которая состоит из двух дней, чтобы отработать практику на большем количестве моделей и глубже погрузиться в обучение. 
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Сколько моделей предоставляется на 1 день обучения?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                8-10 моделей.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Как проходит обучение?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body">
+                За месяц до обучения я отправляю вам весь теоретический курс по инъекционной косметологии в электронном виде для изучения, чтобы на практические занятия Вы приходили подготовленными.
+                Обучение начинается со знакомства, полтора часа выделяется на теорию с пояснением техник на бумаге, где мы разбираем анатомию и неотложную медицинскую помощь. 
+                Далее начинаем отрабатывать практику на множестве моделей, где я ставлю вам руку с нуля. 
+                После обеда продолжаем практическую отработку различных зон, разбирая возможные ошибки. В конце дня выделяем все нюансы и сложности, которые возникали, конспектируя их, закрепляем теорию и выдаем сертификат.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Если после обучения мне что-то останется непонятным, смогу ли я обратиться к вам снова?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                Да, после обучения я предоставляю онлайн поддержку 24/7 и  отвечаю на любые вопросы, а также добавляю Вас в чат моих учениц, где обсуждаются любые темы и всё, что связано с косметологией.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingFive">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  Смогу ли я работать сразу после вашего обучения?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div class="card-body">
+                Да! Конечно, потому что я ставлю Вам руку с нуля, мы отрабатываем все техники на множестве моделей по несколько раз и я предоставляю Вам достаточное количество теории и практики, чтобы начать отрабатывать ее самостоятельно сразу же после обучения.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="ques2__ty">
+          <a href="#">
+            <img src="img/arrow-q.svg" alt="">
+            <span>Записаться</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="call call2">
+      <div class="call__container">
+
+        <h3>У вас остались какие-либо вопросы и выхотите получить больше информации? <br>
+          Оставьте ваш номер и менеджер вам перезвонит.
+        </h3>
+
+        <form class="call__form" action="#">
+          <div class="call__input">
+            <input type="text" placeholder="Имя">
+          </div>
+
+          <div class="call__input">
+            <input id="phone" type="tel" placeholder="Номер телефона">
+          </div>
+
+          <div class="call__comments">
+            <textarea type="text" placeholder="Комментарий или вопрос"></textarea>
+          </div>
+
+          <div class="call__button">
+            <button class="" type="submit">
+              <span>перезвоните мне</span>
+            </button>
+          </div>
+        </form>
+
+      </div>
+    </div>  
   </main>
 
+  <footer class="footer footer__edu">
+    <div class="footer__container">
+      <div class="footer__top">
+        <a href="#" class="footer__top-img">
+          <img src="img/inst-main.svg" alt="">
+        </a>
+        <div class="footer__top-menu">
+          <nav>
+            <a href="#">Главная</a>
+            <a href="#">Работы</a>
+            <a href="#">Цены</a>
+            <a href="#">Обучения</a>
+          </nav>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <a href="/">
+          <img src="img/f-main.png" alt="">
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="js/jquery.maskedinput.min.js"></script>
