--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
-  <title>Documents</title>
+  <title>Главная</title>
 </head>
 <body>
   <header class="header">
@@ -216,7 +216,7 @@
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
                 Во-первых, перед каждой процедурой увеличения губ всегда выполняется аппликационная анестезия (это крем, в состав которого входит лидокаин, который обезболивает поверхностные слои дермы), при условии отсутствия аллергии.
-Во-вторых, также при условии отсутствия аллергической реакции на лидокаин, подбирается препарат, в состав которого он входит.
+                Во-вторых, также при условии отсутствия аллергической реакции на лидокаин, подбирается препарат, в состав которого он входит.
               </div>
             </div>
           </div>
